samples/_failures_safe/1761258018_a8a417_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a0cce50.c: In function ‘next_token’:
./samples/SAFE/__tmp_5a0cce50.c:138:5: error: expected declaration or statement at end of input
  138 |     return token;
      |     ^~~~~~
